--- a/index.html
+++ b/index.html
@@ -14,23 +14,38 @@
 </head>
 
 <body>
+
     <main class="main">
-        <section class="hero row">
-            <div class="col-4">
-                <h1 class="h1">16 Днів проти насильства</h1>
-                <img src="img/16-activity-days.jpg" alt="16 activity days" class="hero-image">
-                <p class="activity-days-p">З 1991 року акцію "16 днів активізму проти насильства" підтримують<br> у 100
+
+        <section class="hero">
+
+                <h1 class="h1">
+                    16 Днів проти насильства
+                </h1>
+
+                <div class="flex-style">
+                    <img src="img/16-activity-days.jpg" alt="16 activity days" class="hero-image">
+                </div>
+
+                <p class="activity-days-p">
+                    З 1991 року акцію "16 днів активізму проти насильства" підтримують<br> у 100
                     країнах
                     світу, щоб збільшити розуміння та поінформованість про<br> всі форми насильства та створити
                     соціальний
-                    простір, вільний від насильства</p>
-            </div>
+                    простір, вільний від насильства
+                </p>
+
         </section>
-        <section class="sub-hero row">
-            <div class="col-4">
-                <img src="img/procents.svg" alt="procents" class="sub-hero-image">
-                <img src="img/Where.svg" alt="Where" class="sub-hero-image">
-                <p class="sub-hero-p">Насильство може бути економічним, сексуальним, фізичним, психологічним.<br> І щоб
+
+        <section class="sub-hero">
+
+               <div class="flex-style">
+                    <img src="img/procents.svg" alt="procents" class="sub-hero-image-procent">
+                    <img src="img/Where.svg" alt="Where" class="sub-hero-image">
+               </div>
+
+                <p class="sub-hero-p">
+                    Насильство може бути економічним, сексуальним, фізичним, психологічним.<br> І щоб
                     подолати
                     будь-яку з його форм, варто почати говорити та звертатися<br> за допомогою. Для постраждалих це
                     непростий
@@ -38,20 +53,34 @@
                     їх.<br>
                     Насильство не повинно залишатися за зачиненими дверима на перший<br> погляд безпечного будинку.
                     Аб'юзери не
-                    зупиняються після щирого каяття,<br> а продовжують здійснювати насильство.</p>
-            </div>
+                    зупиняються після щирого каяття,<br> а продовжують здійснювати насильство.
+                </p>
+
         </section>
-        <section class="last-section row">
-            <div class="col-4">
-                <img src="img/sizers-women.svg" alt="sizers women" class="sizers-women">
+
+        <section class="last-section">
+
+                <div class="flex-style">
+                    <img src="img/sizers-women.svg" alt="sizers women" class="sizers-women">
+                </div>
+
                 <ul class="last-section-list">
-                    <li class="last-section-list-item"><a target="_blank" href="https://vimeo.com/292080839"
+
+                    <li class="last-section-list-item">
+
+                        <a target="_blank" href="https://vimeo.com/292080839"
                             class="last-section-list-item-link">Відеоролик "Розкажи<br>
                             дорослому, якому довіряєш"<br>
                             щодо попередження<br>
                             сексуального насильства щодо
-                            дітей у колі довіри</a></li>
-                    <li class="last-section-list-item"><a target="_blank"
+                            дітей у колі довіри
+                        </a>
+
+                        </li>
+
+                    <li class="last-section-list-item">
+
+                        <a target="_blank"
                             href="https://rm.coe.int/leam-about-your-rights-in-a-digital-environment-ukr/1680a052c2"
                             class="last-section-list-item-link">Буклет "Дізнайся про свої права
                             у цифровому середовищі" з<br>
@@ -59,27 +88,48 @@
                             щодо поваги, захисту та<br>
                             здійснення прав дитини у<br>
                             цифровому середовищі для
-                            дітей та молоді</a></li>
-                    <li class="last-section-list-item"><a target="_blank" href="https://vimeo.com/477933967"
+                            дітей та молоді
+                        </a>
+
+                        </li>
+
+                    <li class="last-section-list-item">
+
+                        <a target="_blank" href="https://vimeo.com/477933967"
                             class="last-section-list-item-link">Відеоролик "Почни говорити"<br>
                             для дітей та дорослих щодо<br>
                             попередження сексуальних
-                            домагань у спорті</a></li>
+                            домагань у спорті
+                        </a>
+
+                        </li>
+
                 </ul>
-            </div>
+
         </section>
     </main>
+
     <footer class="footer">
         <h2>
             Роботу виконали учні 9-В класу:
         </h2>
         <ul>
-            <li>Осетров Аркадій (дизайн)</li>
-            <li>Левчук Леонід (верстка)</li>
+            <li>
+                Осетров Аркадій (дизайн)
+            </li>
+            <li>
+                Левчук Леонід (верстка)
+            </li>
         </ul>
-        <h3>Якщо що, ми можемо зробити веб-дизайн і верстку(зробити сайт за допомогою HTML i CSS).</h3>
-        <a href="mailto:arkadiyosetrov12@gmail.com" target="_blank">Пишіть сюди</a>
+        <h3>
+            
+            Mи можемо зробити веб-дизайн і верстку(зробити сайт за допомогою HTML i CSS).</h3>
+        <a href="mailto:arkadiyosetrov12@gmail.com" target="_blank">
+            Пишіть сюди: arkadiyosetrov12@gmail.com
+        </a>
+
     </footer>
+
 </body>
 
 </html>
