add flex style, add padding

--- a/index.html
+++ b/index.html
@@ -19,30 +19,31 @@
 
         <section class="hero">
 
-                <h1 class="h1">
-                    16 Днів проти насильства
-                </h1>
+            <h1 class="h1">
+                16 Днів проти насильства
+            </h1>
 
-                <div class="flex-style">
-                    <img src="img/16-activity-days.jpg" alt="16 activity days" class="hero-image">
-                </div>
+            <div class="flex-style">
+                <img src="img/16-activity-days.jpg" alt="16 activity days" class="hero-image">
+            </div>
 
-                <p class="activity-days-p">
-                    З 1991 року акцію "16 днів активізму проти насильства" підтримують<br> у 100
-                    країнах
-                    світу, щоб збільшити розуміння та поінформованість про<br> всі форми насильства та створити
-                    соціальний
-                    простір, вільний від насильства
-                </p>
+            <p class="activity-days-p">
+                З 1991 року акцію "16 днів активізму проти насильства" підтримують<br> у 100
+                країнах
+                світу, щоб збільшити розуміння та поінформованість про<br> всі форми насильства та створити
+                соціальний
+                простір, вільний від насильства
+            </p>
 
         </section>
 
         <section class="sub-hero">
 
-               <div class="flex-style">
-                    <img src="img/procents.svg" alt="procents" class="sub-hero-image-procent">
-                    <img src="img/Where.svg" alt="Where" class="sub-hero-image">
-               </div>
+            <div class="flex-style">
+                <img src="img/procents.svg" alt="procents" class="sub-hero-image-procent">
+                <img src="img/Where.svg" alt="Where" class="sub-hero-image">
+            </div>
+            <div class="sub-hero-p-container">
 
                 <p class="sub-hero-p">
                     Насильство може бути економічним, сексуальним, фізичним, психологічним.<br> І щоб
@@ -56,55 +57,56 @@
                     зупиняються після щирого каяття,<br> а продовжують здійснювати насильство.
                 </p>
 
+            </div>
         </section>
 
         <section class="last-section">
 
-                <div class="flex-style">
-                    <img src="img/sizers-women.svg" alt="sizers women" class="sizers-women">
-                </div>
+            <div class="flex-style">
+                <img src="img/sizers-women.svg" alt="sizers women" class="sizers-women">
+            </div>
 
-                <ul class="last-section-list">
+            <ul class="last-section-list">
 
-                    <li class="last-section-list-item">
+                <li class="last-section-list-item">
 
-                        <a target="_blank" href="https://vimeo.com/292080839"
-                            class="last-section-list-item-link">Відеоролик "Розкажи<br>
-                            дорослому, якому довіряєш"<br>
-                            щодо попередження<br>
-                            сексуального насильства щодо
-                            дітей у колі довіри
-                        </a>
+                    <a target="_blank" href="https://vimeo.com/292080839" class="last-section-list-item-link">Відеоролик
+                        "Розкажи<br>
+                        дорослому, якому довіряєш"<br>
+                        щодо попередження<br>
+                        сексуального насильства щодо
+                        дітей у колі довіри
+                    </a>
 
-                        </li>
+                </li>
 
-                    <li class="last-section-list-item">
+                <li class="last-section-list-item">
 
-                        <a target="_blank"
-                            href="https://rm.coe.int/leam-about-your-rights-in-a-digital-environment-ukr/1680a052c2"
-                            class="last-section-list-item-link">Буклет "Дізнайся про свої права
-                            у цифровому середовищі" з<br>
-                            рекомендаціями Ради Європи<br>
-                            щодо поваги, захисту та<br>
-                            здійснення прав дитини у<br>
-                            цифровому середовищі для
-                            дітей та молоді
-                        </a>
+                    <a target="_blank"
+                        href="https://rm.coe.int/leam-about-your-rights-in-a-digital-environment-ukr/1680a052c2"
+                        class="last-section-list-item-link">Буклет "Дізнайся про свої права
+                        у цифровому середовищі" з<br>
+                        рекомендаціями Ради Європи<br>
+                        щодо поваги, захисту та<br>
+                        здійснення прав дитини у<br>
+                        цифровому середовищі для
+                        дітей та молоді
+                    </a>
 
-                        </li>
+                </li>
 
-                    <li class="last-section-list-item">
+                <li class="last-section-list-item">
 
-                        <a target="_blank" href="https://vimeo.com/477933967"
-                            class="last-section-list-item-link">Відеоролик "Почни говорити"<br>
-                            для дітей та дорослих щодо<br>
-                            попередження сексуальних
-                            домагань у спорті
-                        </a>
+                    <a target="_blank" href="https://vimeo.com/477933967" class="last-section-list-item-link">Відеоролик
+                        "Почни говорити"<br>
+                        для дітей та дорослих щодо<br>
+                        попередження сексуальних
+                        домагань у спорті
+                    </a>
 
-                        </li>
+                </li>
 
-                </ul>
+            </ul>
 
         </section>
     </main>
@@ -122,7 +124,7 @@
             </li>
         </ul>
         <h3>
-            
+
             Mи можемо зробити веб-дизайн і верстку(зробити сайт за допомогою HTML i CSS).</h3>
         <a href="mailto:arkadiyosetrov12@gmail.com" target="_blank">
             Пишіть сюди: arkadiyosetrov12@gmail.com
