--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                     подолати
                     будь-яку з його форм, варто почати говорити та звертатися<br> за допомогою. Для постраждалих це
                     непростий
-                    крок, часом вони вирішуються<br> на це роками… Тому якщо у вашому оточенні є такі люди — підтримайте
+                    крок, часом вони вирішуються<br> на це роками… Тому, якщо у вашому оточенні є такі люди, підтримайте
                     їх.<br>
-                    Насильство не повинно залишатися за зачиненими дверима на перший<br> погляд безпечного будинку.
+                    Насильство не повинно залишатися за зачиненими дверима, на перший<br> погляд безпечного будинку.
                     Аб'юзери не
                     зупиняються після щирого каяття,<br> а продовжують здійснювати насильство.
                 </p>
